Fixing click on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -249,6 +249,7 @@ img {
       width: 100%;
       padding: 0 20px;
       box-sizing: border-box;
+      cursor: pointer;
 
       /* iPhone 6, 7, 8 ----------- */
       @media only screen and (min-device-width: 375px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
